src/k8s/apps/sgfdevs-edge-forward/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: edge-routing
spec:
  redirectScheme:
    scheme: https
    permanent: true
