src/k8s/apps/sgfdevs-edge-forward/service-sgfdevs-k3s-03.yaml
apiVersion: v1
kind: Service
metadata:
  name: sgfdevs-k3s-03
  namespace: edge-routing
spec:
  type: ExternalName
  externalName: sgfdevs-k3s-03.headnet.levizitting.com
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
