src/k8s/apps/sgfdevs-edge-forward/ingressroute-http-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sgfdevs-http-redirect
  namespace: edge-routing
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`sgf.dev`) || HostRegexp(`{subdomain:[a-z0-9-]+}.sgf.dev`)
      middlewares:
        - name: redirect-to-https
      services:
        - kind: TraefikService
          name: sgfdevs-origin-pool
