src/k8s/apps/sgfdevs-edge-forward/ingressroute-http-zone-forward.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sgfdevs-http-zone-forward
  namespace: edge-routing
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: >-
        Host(`sgf.dev`) ||
        HostRegexp(`^([a-z0-9-]+\.)*sgf\.dev$`) ||
        Host(`methodconf.com`) ||
        HostRegexp(`^([a-z0-9-]+\.)*methodconf\.com$`) ||
        Host(`hack4goodsgf.com`) ||
        HostRegexp(`^([a-z0-9-]+\.)*hack4goodsgf\.com$`)
      services:
        - name: sgfdevs-k3s
          port: 80
