src/k8s/apps/sgfdevs-edge-forward/ingressroute-wildcard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sgfdevs-wildcard-forward
  namespace: edge-routing
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: HostRegexp(`{subdomain:[a-z0-9-]+}.sgf.dev`)
      services:
        - kind: TraefikService
          name: sgfdevs-origin-pool
