src/k8s/apps/sgfdevs-edge-forward/ingressroutetcp-sgfdev-zone-passthrough.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: sgfdevs-zone-sni-passthrough
  namespace: edge-routing
spec:
  entryPoints:
    - websecure
  routes:
    - match: >-
        HostSNIRegexp(`^([a-z0-9-]+\.)*sgf\.dev$`) ||
        HostSNIRegexp(`^([a-z0-9-]+\.)*methodconf\.com$`) ||
        HostSNIRegexp(`^([a-z0-9-]+\.)*hack4goodsgf\.com$`)
      services:
        - name: sgfdevs-k3s
          port: 443
  tls:
    passthrough: true
